--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+update-manager (0.44.17) edgy; urgency=low
+
+  * memory leak fixed (lp: #43096)
+
+ -- 
+
 update-manager (0.44.16) edgy; urgency=low
 
   * fix proxy usage when runing in non-root mode (lp: #40626)
